# shopify-function-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  example_with_wasm_api.trampolined.perf
.github/: dependabot.yml
.github/workflows/: ci.yml
example/: .output.graphql  Cargo.toml  README.md  input.graphql
example/src/: main.rs  tests.rs
example_with_miniserde/: Cargo.toml
example_with_miniserde/src/: lib.rs
example_with_targets/: .a.output.graphql  .b.output.graphql  .target_a.output.graphql  .target_b.output.graphql  Cargo.toml  README.md  a.graphql  b.graphql  cart.graphql  schema.graphql  shopify.function.extension.toml
example_with_targets/src/: lib.rs  main.rs  tests.rs
example_with_wasm_api/: Cargo.toml  input.graphql  input.json  schema.graphql
example_with_wasm_api/src/: main.rs
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
integration_tests/tests/: integration_test.rs
myfunc/: Cargo.toml  input.graphql
myfunc/src/: main.rs  tests.rs
shopify_function/: Cargo.toml  LICENSE  README.md
shopify_function/examples/: a.graphql  example_miniserde.rs  example_serde.rs
shopify_function/src/: discounts.rs  enums.rs  lib.rs  scalars.rs
shopify_function/src/scalars/: decimal.rs  decimal_miniserde.rs  json_value.rs
shopify_function/tests/: derive_deserialize_default_test.rs  derive_deserialize_test.rs  generate_types.rs  macro_hygiene_test.rs  shopify_function.rs  shopify_function_target.rs  wasm_api_integration_test.rs
shopify_function/tests/fixtures/: input.graphql  schema.graphql  schema_with_targets.graphql  validate.graphql
shopify_function_macro/: Cargo.toml  README.md
shopify_function_macro/src/: lib.rs
shopify_rust_function/: Cargo.toml
shopify_rust_function/src/: api.rs  discount_schema.rs  discounts.rs  lib.rs
shopify_rust_function_macro/: Cargo.toml
shopify_rust_function_macro/src/: lib.rs
tmp/: trampoline-1.0.0
