[workspace]
resolver = "2"
members = [
    "example_with_targets",
    "shopify_function",
    "shopify_function_macro",
    "integration_tests",
]

[workspace.package]
version = "2.0.2"

[workspace.dependencies]
shopify_function_macro = { version = "=2.0.2", path = "shopify_function_macro" }

[profile.release]
lto = true
opt-level = 'z'
strip = true
