[package]
name = "volume"
version = "1.0.0"
edition = "2021"

[dependencies]
shopify_function = { version = "0.2.3" }
serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0"
graphql_client = { git = "https://github.com/graphql-rust/graphql-client", rev = "0776197ad7cfde2c658490e7c7e627a21ed622cb" }
