[package]
name = "example_with_targets"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
shopify_function = { path = "../shopify_function" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
bluejay-typegen = { git = "https://github.com/Shopify/bluejay", rev = "0b04d8af24ab384f3e5698146be24d1725436665" }