[package]
name = "shopify_function_macro"
version = "0.8.1"
edition = "2021"
authors = ["Surma <surma@shopify.com>", "Delta Pham <d.pham@shopify.com>"]
license = "MIT"
description = "Macros for the `shopify_function` crate."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.94"
bluejay-typegen-codegen = { git = "https://github.com/Shopify/bluejay", rev = "e5f2be4aa36455ff6b9cd9d56ed11b5ee83f14d6" }
bluejay-core = { git = "https://github.com/Shopify/bluejay", rev = "e5f2be4aa36455ff6b9cd9d56ed11b5ee83f14d6" }
