[package]
name = "shopify_function_macro"
version = "0.8.1"
edition = "2021"
authors = ["Surma <surma@shopify.com>", "Delta Pham <d.pham@shopify.com>"]
license = "MIT"
description = "Macros for the `shopify_function` crate."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.94"
bluejay-typegen-codegen = { git = "https://github.com/Shopify/bluejay", rev = "8186f320ed902d7f4fd5fd93783ec633cbfdfae0" }
bluejay-core = { git = "https://github.com/Shopify/bluejay", rev = "8186f320ed902d7f4fd5fd93783ec633cbfdfae0" }
convert_case = "0.8"
