[package]
name = "shopify_function_macro"
version.workspace = true
edition = "2021"
authors = ["Surma <surma@shopify.com>", "Delta Pham <d.pham@shopify.com>"]
license = "MIT"
description = "Macros for the `shopify_function` crate."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.106"
bluejay-typegen-codegen = "0.3.1"
bluejay-core = "0.3.1"
convert_case = "0.10"
